--- a/package.json
+++ b/package.json
@@ -10,13 +10,21 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
+    "@sanity/image-url": "^1.1.0",
     "class-variance-authority": "^0.7.1",
+    "critters": "^0.0.23",
     "framer-motion": "^12.23.6",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
+    "next-sanity": "^10.0.1",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "react-toastify": "^11.0.5",
+    "styled-components": "^6.1.19",
+    "swr": "^2.3.4",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
@@ -25,6 +33,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
     "tailwindcss": "^4.1.11",
