--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "class-variance-authority": "^0.7.1",
     "critters": "^0.0.23",
     "framer-motion": "^12.23.6",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "next-sanity": "^10.0.1",
+    "nodemailer": "^7.0.5",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-syntax-highlighter": "^15.6.1",
     "react-toastify": "^11.0.5",
@@ -31,6 +34,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-syntax-highlighter": "^15.5.13",
