--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "eslint-config-next": "15.3.5",
     "tailwindcss": "^4.1.11",
     "typescript": "^5"
+  },
+  "overrides": {
+    "prismjs": "^1.30.0"
   }
 }
