--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-syntax-highlighter": "^15.6.1",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.2.1",
     "styled-components": "^6.1.19",
     "swr": "^2.3.4",
     "tailwind-merge": "^3.3.1"
