--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
+    "@reduxjs/toolkit": "^2.9.0",
     "@sanity/image-url": "^1.1.0",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "critters": "^0.0.23",
     "framer-motion": "^12.23.6",
@@ -24,6 +26,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "react-redux": "^9.2.0",
     "react-syntax-highlighter": "^15.6.1",
     "react-toastify": "^11.0.5",
     "recharts": "^3.2.1",
